# cpu-model

./: CMakeLists.txt  ProjectConfig.h.in  README.md
src/: CMakeLists.txt  main.cpp
src/bus/: CMakeLists.txt  bus.cpp  bus.h
src/core/: CMakeLists.txt  core.cpp  core.h
src/core/allocate/: CMakeLists.txt  allocate.cpp  allocate.h
src/core/allocate/rename/: CMakeLists.txt  rename.cpp  rename.h
src/core/decode/: CMakeLists.txt  decode.cpp  decode.h
src/core/execute/: CMakeLists.txt  execute.cpp  execute.h
src/core/execute/reservation/: CMakeLists.txt  reservation.cpp  reservation.h
src/core/execute/scheduler/: CMakeLists.txt  scheduler.cpp  scheduler.h
src/core/fetch/: CMakeLists.txt  fetch.cpp  fetch.h
src/core/fetch/icache/: icache.h
src/core/register/: CMakeLists.txt  register.cpp  register.h
src/core/rename/: CMakeLists.txt  rat.h  rename.cpp  rename.h
src/core/rob/: CMakeLists.txt  rat.h  rob.cpp  rob.h
src/core/state/: CMakeLists.txt  state.cpp  state.h
src/instruction/func/: func.cpp  func.h
src/instruction/isa/: CMakeLists.txt  decoder.cpp  decoder.h  isa.h
src/instruction/isa/armv6m/: CMakeLists.txt  armv6m.cpp  armv6m.h
src/instruction/isa/riscv/rv32i/: CMakeLists.txt  rv32i.cpp  rv32i.h
src/instruction/portbind/: CMakeLists.txt  portbind.cpp  portbind.h
src/utils/common/: CMakeLists.txt  common.h
src/utils/delay/: CMakeLists.txt  delay.h
src/utils/func/: CMakeLists.txt  func.cpp  func.h
src/utils/idata/: CMakeLists.txt  idata.cpp  idata.h
src/utils/isa/: CMakeLists.txt  isa.h
src/utils/isa/armv6m/: armv6m.cpp  armv6m.h
src/utils/parameter/: CMakeLists.txt  parameter.h
src/utils/uinstr/: CmakeLists.txt  uinstr.cpp  uinstr.h
src/utils/uop/: CMakeLists.txt  uop.h
test/: CMakeLists.txt
test/src/: bus_tests.cpp
test/src/scheduler/: reservation_station_test.cpp
